--- a/plugins/heidimarasigan/nltc/controllers/applicants/_list_toolbar.htm
+++ b/plugins/heidimarasigan/nltc/controllers/applicants/_list_toolbar.htm
@@ -8,7 +8,7 @@
             checked: $('.control-list').listWidget('getChecked')
         })"
         data-request="onDelete"
-        data-request-confirm="<?= e(trans('heidimarasigan.nltc::lang.nltc.id.delete_selected_confirm')) ?>"
+        data-request-confirm="<?= e(trans('Are you sure you want to delete the selected applicant?')) ?>"
         data-trigger-action="enable"
         data-trigger=".control-list input[type=checkbox]"
         data-trigger-condition="checked"
