--- a/plugins/heidimarasigan/nltc/controllers/classrecords/_list_toolbar.htm
+++ b/plugins/heidimarasigan/nltc/controllers/classrecords/_list_toolbar.htm
@@ -1,8 +1,8 @@
 <div data-control="toolbar">
     <a
-        href="<?= Backend::url('heidimarasigan/nltc/profiles/create') ?>"
+        href="<?= Backend::url('heidimarasigan/nltc/classrecords/create') ?>"
         class="btn btn-primary oc-icon-plus">
-        New Profile
+        New Class Record
     </a>
 
     <button
@@ -12,7 +12,7 @@
             checked: $('.control-list').listWidget('getChecked')
         })"
         data-request="onDelete"
-        data-request-confirm="<?= e(trans('Are you sure you want to delete the selected profile?')) ?>"
+        data-request-confirm="<?= e(trans('Are you sure you want to delete the selected class record?')) ?>"
         data-trigger-action="enable"
         data-trigger=".control-list input[type=checkbox]"
         data-trigger-condition="checked"
