--- a/plugins/heidimarasigan/nltc/controllers/subjects/_list_toolbar.htm
+++ b/plugins/heidimarasigan/nltc/controllers/subjects/_list_toolbar.htm
@@ -1,3 +1,19 @@
 <div data-control="toolbar">
         <a href="<?= Backend::url('heidimarasigan/nltc/subjects/create') ?>" class="btn btn-primary oc-icon-plus"><?= e(trans('backend::lang.form.create')) ?></a>
+
+        <button
+	        class="btn btn-default oc-icon-trash-o"
+	        disabled="disabled"
+	        onclick="$(this).data('request-data', {
+	            checked: $('.control-list').listWidget('getChecked')
+	        })"
+	        data-request="onDelete"
+	        data-request-confirm="<?= e(trans('Are you sure you want to delete the selected subject?')) ?>"
+	        data-trigger-action="enable"
+	        data-trigger=".control-list input[type=checkbox]"
+	        data-trigger-condition="checked"
+	        data-request-success="$(this).prop('disabled', true)"
+	        data-stripe-load-indicator>
+	        <?= e(trans('backend::lang.list.delete_selected')) ?>
+	    </button>
     </div>
